# undicht_0.42

./: .gitignore  .gitmodules  CMakeLists.txt
core/: CMakeLists.txt
core/src/: buffer_layout.cpp  buffer_layout.h  config.h  debug.cpp  debug.h  file_tools.cpp  file_tools.h  profiler.cpp  profiler.h  types.cpp  types.h
engine/: CMakeLists.txt
engine/src/: application.cpp  application.h  engine.cpp  engine.h  frame_manager.cpp  frame_manager.h
engine/src/application_templates/: basic_app_template.cpp  basic_app_template.h
engine/src/scene/: material.cpp  mesh.cpp  mesh.h  scene.cpp  scene.h  scene_loader.cpp  scene_loader.h  texture.h
examples/: CMakeLists.txt
examples/animation_test/: CMakeLists.txt
examples/animation_test/src/: main.cpp
examples/hello_triangle/: CMakeLists.txt  hello_triangle
examples/hello_triangle/src/: main.cpp
examples/hello_triangle/src/shader/: triangle.frag
examples/physics_test/: CMakeLists.txt
examples/physics_test/res/: cube.dae  sphere.dae
examples/physics_test/src/: free_camera.cpp  free_camera.h  main.cpp  physics_renderer.cpp  physics_renderer.h  physics_scene.cpp  physics_scene.h
examples/sky_test/: CMakeLists.txt
examples/sky_test/src/: main.cpp  sky_renderer.cpp  sky_renderer.h
examples/textured_cube/: CMakeLists.txt
examples/textured_cube/res/: .gitignore
examples/textured_cube/src/: main.cpp
examples/textured_cube/src/shader/: cube.vert
graphics/: CMakeLists.txt
graphics/src/core/vulkan/: buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  fence.cpp  fence.h  formats.cpp  formats.h  frame_buffer.cpp  frame_buffer.h  image.cpp  image.h  image_view.cpp  image_view.h  instance.cpp  instance.h  logical_device.cpp  logical_device.h  pipeline.cpp  pipeline.h  render_pass.cpp  render_pass.h  sampler.cpp  sampler.h  semaphore.cpp  semaphore.h  shader_module.cpp  shader_module.h  swap_chain.cpp  swap_chain.h  vk_debug.h
graphics/src/renderer/renderer_templates/: basic_renderer_template.cpp  basic_renderer_template.h
graphics/src/renderer/vulkan/: descriptor_set_cache.cpp  descriptor_set_cache.h  transfer_buffer.cpp  transfer_buffer.h  uniform_buffer.cpp  uniform_buffer.h
graphics/src/scene/: animation.cpp  animation.h  bone.cpp  bone.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_bone.cpp  mesh_bone.h  node.cpp  node.h  node_animation.cpp  node_animation.h  scene.cpp  scene.h  scene_group.cpp  scene_group.h  skeleton.cpp  skeleton.h  texture.cpp  texture.h
graphics/src/scene/renderer/: renderer.cpp  renderer.h  scene_renderer.cpp  scene_renderer.h
graphics/src/scene/renderer/basic/: basic_animation_renderer.cpp  basic_animation_renderer.h  basic_renderer.cpp  basic_renderer.h
graphics/src/scene/shader/: basic_animation_shader.frag  basic_animation_shader.vert  basic_shader.frag  basic_shader.vert  cube.vert
graphics/src/shader/: compile.py
graphics/src/window/glfw/: monitor.cpp  monitor.h  window.cpp  window.h  window_api.cpp  window_api.h
physics/: CMakeLists.txt
physics/src/: debug_body_activation_listener.cpp  debug_body_activation_listener.h  debug_contact_listener.cpp  debug_contact_listener.h  object_layers.cpp  object_layers.h  physics.cpp  physics.h
physics/src/math/: physics_types.h
physics/src/objects/: cuboid_object.cpp  cuboid_object.h  sphere_object.cpp  sphere_object.h
physics/src/primitives/: cuboid.cpp  cuboid.h  object.cpp  object.h  sphere.cpp  sphere.h
physics/src/simulation/: collision.cpp  collision.h  collision_detection.cpp  collision_detection.h  physics_simulation.cpp  physics_simulation.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/core/src/: main.cpp
tests/swapchain/: CMakeLists.txt
tests/swapchain/src/: main.cpp
tests/vulkan_init/: CMakeLists.txt
tests/vulkan_init/src/: main.cpp
tools/: CMakeLists.txt
tools/src/: file_tools.cpp
tools/src/3D/camera/: camera_3d.cpp  camera_3d.h  free_camera.cpp  free_camera.h  perspective_camera_3d.cpp  perspective_camera_3d.h
tools/src/binary_data/: binary_data_buffer.cpp  binary_data_buffer.h  binary_data_file.cpp  binary_data_file.h
tools/src/math/: math_tools.cpp  math_tools.h  orientation_3d.cpp  orientation_3d.h  orthographic_projection.cpp  orthographic_projection.h  perspective_projection.cpp  perspective_projection.h
tools/src/scene_loader/: scene_loader.cpp  scene_loader.h  texture_loader.cpp  texture_loader.h
tools/src/xml/: xml_element.cpp  xml_element.h  xml_file.cpp  xml_file.h  xml_tag_attribute.cpp  xml_tag_attribute.h
